# NexusOneAI

./: .gitignore  README.md
.claude/: settings.json
.github/workflows/: analytics-service.yml  audit-service.yml  auth-service.yml  chat-service.yml  ci.yml  (+5 more)
ai-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
analytics-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
analytics-service/alembic/: env.py
analytics-service/src/analytics_service/: main.py
analytics-service/src/analytics_service/core/: config.py  database.py  deps.py
analytics-service/src/analytics_service/models/: event.py
analytics-service/src/analytics_service/routes/: analytics.py
analytics-service/tests/: conftest.py  test_analytics.py
api-gateway/: Dockerfile  README.md  docker-compose.yml  nginx.conf
audit-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
auth-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
auth-service/alembic/: env.py
auth-service/src/auth_service/: main.py
auth-service/src/auth_service/core/: config.py  database.py  exceptions.py  kafka.py  logging.py  redis.py
auth-service/src/auth_service/models/: api_key.py  oauth_account.py  refresh_token.py  user.py
auth-service/src/auth_service/routes/: auth.py  users.py
auth-service/src/auth_service/schemas/: auth.py  user.py
auth-service/src/auth_service/services/: event_consumer.py  jwt_service.py  keycloak_admin_service.py  keycloak_oauth_service.py  oauth_service.py  user_service.py
auth-service/tests/: conftest.py  test_auth.py
chat-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
infrastructure/: Makefile  README.md  docker-compose.infra.yml  docker-compose.yml
knowledge-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notification-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
organization-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
project-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
project-service/alembic/: env.py
project-service/src/project_service/: main.py
project-service/src/project_service/core/: config.py  database.py  deps.py  exceptions.py  kafka.py  logging.py  search.py
project-service/src/project_service/models/: comment.py  label.py  milestone.py  project.py  task.py  task_label.py
project-service/src/project_service/routes/: comments.py  projects.py  tasks.py
project-service/src/project_service/schemas/: comment.py  project.py  task.py
project-service/src/project_service/services/: project_service.py  task_service.py
project-service/tests/: conftest.py  test_projects.py  test_tasks.py
search-service/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
web/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
workflow-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
(+141 files in other folders)
