[project]
name = "analytics-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0", "sqlalchemy[asyncio]>=2.0.31", "asyncpg>=0.29.0",
    "alembic>=1.13.0", "redis[hiredis]>=5.0.7", "aiokafka>=0.11.0",
    "httpx>=0.27.0", "structlog>=24.2.0",
    "opentelemetry-api>=1.25.0", "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/analytics_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
