[project]
name = "auth-service"
version = "1.0.0"
description = "NexusOne AI — Auth Service: JWT, OAuth2, API keys, MFA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # All deps owned by this service — no shared library dependency
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "bcrypt==3.2.2",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.0.7",
    "aiokafka>=0.11.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "boto3>=1.34.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
