[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-service"
version = "1.0.0"
description = "NexusOne AI Project Service — project and task management microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis[hiredis]",
    "aiokafka",
    "httpx",
    "structlog",
    "python-multipart",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp-proto-grpc",
    "prometheus-fastapi-instrumentator",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
